<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="369dp"
        android:layout_height="194dp"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/entrada_valor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite o primeiro valor: "
            android:inputType="number"
            android:numeric="decimal"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/entrada_valor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="Digite o segundo valor: "
            android:inputType="number"
            android:numeric="decimal"
            android:textSize="24sp"
            tools:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/resultado_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            tools:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="251dp"
        android:layout_height="304dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/botao_somar"
            android:layout_width="173dp"
            android:layout_height="wrap_content"

            android:onClick="somar"
            android:text="@string/somar" />

        <Button
            android:id="@+id/botao_subtrair"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="subtrair"
            android:text="@string/subtrair"
            tools:layout_marginTop="20dp" />

        <Button
            android:id="@+id/botao_multiplicar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="multiplicacao"
            android:text="@string/multiplicar"
            tools:layout_marginTop="20dp" />

        <Button
            android:id="@+id/botao_dividir"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="dividir"
            android:text="@string/dividir"
            tools:layout_marginTop="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>